LogInNavBar Partial View

--- a/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
+++ b/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
@@ -125,9 +125,7 @@
             </div>
             <div class="col-sm-3" style="background-color:#222222; color:#9D9D9D; padding:5px; text-align: center">
                 <h4><span class="glyphicon glyphicon-user"></span> Mitt Konto</h4>
-				<a href="/user/createuser"><span class="glyphicon glyphicon-user"></span> Registrera</a><br><br>
-				<a href="/home/login"><span class="glyphicon glyphicon-log-in"></span> Logga in</a>
-
+				@Html.Partial("LogInNavBar")
             </div>
             <!-- #endregion -->
         </div>
