--- a/KickAss2/src/KickAss2/Views/Home/Index.cshtml
+++ b/KickAss2/src/KickAss2/Views/Home/Index.cshtml
@@ -1,4 +1,13 @@
-﻿<style>
+﻿@model string
+@if (Model != null)
+{
+    <div>
+        Logged In as @Model
+    </div>
+}
+
+
+<style>
     .carousel-inner > .item > img,
     .carousel-inner > .item > a > img {
         width: 100%;
