Log in session user name valsöfkestpfsidjf

--- a/KickAss2/src/KickAss2/Views/Home/Index.cshtml
+++ b/KickAss2/src/KickAss2/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@model string
+﻿@model CurrentUserVM
 @if (Model != null)
 {
     <div>
-        Logged In as @Model
+        Logged In as @Model.UserName
     </div>
 }
 
