--- a/KickAss2/src/KickAss2/Views/Home/Index.cshtml
+++ b/KickAss2/src/KickAss2/Views/Home/Index.cshtml
@@ -50,7 +50,7 @@
         <p style="text-align: left">En stilig almanack i A5 format</p>
         </span><form asp-controller="Home" asp-action="AddToCart">
         <input type="text" class="numbersTextBox" name="quantity" id="quantity" />&nbsp;<span id="errmsg">
-        <button type="button" class="btn btn-success btn-sm" style="background-color: forestgreen; float: left;"><span class="glyphicon glyphicon-shopping-cart"></span></button>
+        <button type="button" class="btn btn-success btn-xs" style="background-color: forestgreen; float: left;"><span class="glyphicon glyphicon-shopping-cart"></span></button>
         </form>
     </div>
     <div class="col-sm-4">
@@ -59,7 +59,7 @@
         <p style="text-align: left">Två stycken <i><b>must have</b></i> Kickass pennor</p>
         </span><form asp-controller="Home" asp-action="AddToCart">
             <input type="text" class="numbersTextBox" name="quantity" id="quantity" />&nbsp;<span id="errmsg">
-                <button type="button" class="btn btn-success btn-sm" style="background-color: forestgreen; float: left;"><span class="glyphicon glyphicon-shopping-cart"></span></button>
+                <button type="button" class="btn btn-success btn-xs" style="background-color: forestgreen; float: left;"><span class="glyphicon glyphicon-shopping-cart"></span></button>
         </form>
     </div>
     <div class="col-sm-4">
@@ -68,7 +68,7 @@
         <p style="text-align: left">50 stycken C5 kuvert</p>
         </span><form asp-controller="Home" asp-action="AddToCart">
             <input type="text" class="numbersTextBox" name="quantity" id="quantity" />&nbsp;<span id="errmsg">
-                <button type="button" class="btn btn-success btn-sm" style="background-color: forestgreen; float: left;"><span class="glyphicon glyphicon-shopping-cart"></span></button>
+                <button type="button" class="btn btn-success btn-xs" style="background-color: forestgreen; float: left;"><span class="glyphicon glyphicon-shopping-cart"></span></button>
         </form>
     </div>
 </div>
