Nu fungerar det

--- a/KickAss2/src/KickAss2/Views/Shared/ToLogIn.cshtml
+++ b/KickAss2/src/KickAss2/Views/Shared/ToLogIn.cshtml
@@ -37,5 +37,6 @@
 </form>
 
 
-
+@*<script src="~/Script/jquery.validate.min.js"></script>
+<script src="~/Script/jquery.validate.unobtrusive.min.js"></script>*@
 
