--- a/KickAss2/src/KickAss2/Views/Home/Index.cshtml
+++ b/KickAss2/src/KickAss2/Views/Home/Index.cshtml
@@ -7,17 +7,17 @@
 }
 
 <script>
-    $(document).ready(function () {
-        //called when key is pressed in textbox
-        $("#quantity").keypress(function (e) {
-            //if the letter is not digit then display error and don't type anything
-            if (e.which != 8 && e.which != 0 && (e.which < 48 || e.which > 57)) {
-                //display error message
-                $("#errmsg").html("Bara siffror tack ditt nöthuvud!").show().fadeOut("slow");
-                return false;
-            }
-        });
-    });
+    //$(document).ready(function () {
+    //    //called when key is pressed in textbox
+    //    $("#quantity").keypress(function (e) {
+    //        //if the letter is not digit then display error and don't type anything
+    //        if (e.which != 8 && e.which != 0 && (e.which < 48 || e.which > 57)) {
+    //            //display error message
+    //            $("#errmsg").html("Bara siffror tack ditt nöthuvud!").show().fadeOut("slow");
+    //            return false;
+    //        }
+    //    });
+    //});
 </script>
 
 <style>
