--- a/KickAss2/src/KickAss2/Views/Shared/ToLogIn.cshtml
+++ b/KickAss2/src/KickAss2/Views/Shared/ToLogIn.cshtml
@@ -35,6 +35,16 @@
         </div>
     </div>
 </form>
+<environment names="Development">
+    <script src="~/Scripts/jquery.js"></script>
+    <script src="~/Scripts/jquery.validate.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
+</environment>
+<environment names="Production">
+    <script src="~/Scripts/jquery.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+</environment>
 
 
 
