--- a/KickAss2/src/KickAss2/Views/Home/Index.cshtml
+++ b/KickAss2/src/KickAss2/Views/Home/Index.cshtml
@@ -52,6 +52,13 @@
         <input type="text" class="numbersTextBox" name="quantity" id="quantity" />&nbsp;<span id="errmsg">
         <button type="button" class="btn btn-success btn-xs" style="background-color: forestgreen; float: left;"><span class="glyphicon glyphicon-shopping-cart"></span></button>
         </form>
+        
+        @if (Model != null)
+        {
+        <button type="button" class="btn btn-info btn-xs" style="float: left;"><span class="glyphicon glyphicon-pencil"></span></button>
+        <button type="button" class="btn btn-danger btn-xs" style="float: left;"><span class="glyphicon glyphicon-trash"></span></button>
+        }
+
     </div>
     <div class="col-sm-4">
         <img src="~/images/Pennor.jpg" class="img-responsive" style="width: 100%; height: 100%" />
@@ -61,6 +68,13 @@
             <input type="text" class="numbersTextBox" name="quantity" id="quantity" />&nbsp;<span id="errmsg">
                 <button type="button" class="btn btn-success btn-xs" style="background-color: forestgreen; float: left;"><span class="glyphicon glyphicon-shopping-cart"></span></button>
         </form>
+
+        @if (Model != null)
+        {
+            <button type="button" class="btn btn-info btn-xs" style="float: left;"><span class="glyphicon glyphicon-pencil"></span></button>
+            <button type="button" class="btn btn-danger btn-xs" style="float: left;"><span class="glyphicon glyphicon-trash"></span></button>
+        }
+
     </div>
     <div class="col-sm-4">
         <img src="~/images/Kuvert.jpg" class="img-responsive" style="width: 100%; height: 100%" />
@@ -70,6 +84,13 @@
             <input type="text" class="numbersTextBox" name="quantity" id="quantity" />&nbsp;<span id="errmsg">
                 <button type="button" class="btn btn-success btn-xs" style="background-color: forestgreen; float: left;"><span class="glyphicon glyphicon-shopping-cart"></span></button>
         </form>
+
+        @if (Model != null)
+        {
+            <button type="button" class="btn btn-info btn-xs" style="float: left;"><span class="glyphicon glyphicon-pencil"></span></button>
+            <button type="button" class="btn btn-danger btn-xs" style="float: left;"><span class="glyphicon glyphicon-trash"></span></button>
+        }
+
     </div>
 </div>
 
