--- a/KickAss2/src/KickAss2/Views/Order/ShoppingCart.cshtml
+++ b/KickAss2/src/KickAss2/Views/Order/ShoppingCart.cshtml
@@ -4,27 +4,36 @@
     <div class="col-sm-12">
         <h1 style="text-align: center; font-weight: bold"><span class="glyphicon glyphicon-shopping-cart"></span> Varukorgen</h1>
         <br />
-        <p>Här hittar du information om dina tidigare order, hanterar dina uppgifer etc.</p>
+        <p>Nedan visas alla produkter i din varukorg</p>
         <hr />
     </div>
 </div>
 <div id="row2" class="row" style="padding: 5px; text-align: center">
     <div class="col-sm-4">
-        <h4 style="text-align: left; font-weight: bold">Mina uppgifter</h4>
-        <p style="text-align: left"><a href="#addressDetails">Adressuppgifter</a></p>
-        <p style="text-align: left"><a href="#paymentDetails">Betalningsalternativ</a></p>
+        <h4 style="text-align: left; font-weight: bold">Kuvert, 29 kr/st</h4>
+        <p style="text-align: left"><a href="#paymentDetails">50 stycken C5 kuvert</a></p>
+        <p style="text-align: left"><b>Antal: </b> 3 st</p>
+        <p style="text-align: left"><b>Kostnad: </b> 87 st</p>
     </div>
-    <div id="verticalLines" class="col-sm-4">
-        <h4 style="text-align: left; font-weight: bold">Orderhistorik</h4>
-        <ul id="leftAlignLi" type="square" style="text-align: left">
-            <li style="text-align: left">Order 1</li>
-            <li style="text-align: left">Order 2</li>
-            <li style="text-align: left">Order 3</li>
-            <li style="text-align: left">Order 4</li>
-        </ul>
+    <div class="col-sm-4" id="verticalLines">
+        <h4 style="text-align: left; font-weight: bold">Almanacka, 39 kr/st</h4>
+        <p style="text-align: left"><a href="#paymentDetails">En stilig almanack i A5 format</a></p>
+        <p style="text-align: left"><b>Antal: </b> 1 st</p>
+        <p style="text-align: left"><b>Kostnad: </b> 39 st</p>
     </div>
     <div class="col-sm-4">
-        <h4 style="text-align: left; font-weight: bold">Mina erbjudanden</h4>
-        <p style="text-align: left"><a href="#categoriIdPennor">Pennor</a> - Köp 3 paket betala för 2</p>
+        <h4 style="text-align: left; font-weight: bold">Pennor, 199 kr/st</h4>
+        <p style="text-align: left"><a href="#paymentDetails">Två stycken must have Kickass pennor</a></p>
+        <p style="text-align: left"><b>Antal: </b> 1 st</p>
+        <p style="text-align: left"><b>Kostnad: </b> 199 st</p>
+    </div>
+</div>
+<hr />
+
+<div id="row1" class="row" style="padding: 5px" ; text-align center>
+    <div class="col-sm-12">
+        <h1 style="text-align: center; font-weight: bold"><span class="glyphicon glyphicon-shopping-cart"></span> Totalt: 500 kr</h1>
+        <br />
+        <hr />
     </div>
 </div>
