--- a/KickAss2/src/KickAss2/Views/User/CreateUser.cshtml
+++ b/KickAss2/src/KickAss2/Views/User/CreateUser.cshtml
@@ -4,8 +4,9 @@
 
     ViewBag.Title = "Registrera ny användare";
 }
+<link href="~/css/kickass.css" rel="stylesheet" />
 <body>
-    <h1 style="text-align: center">Fyll i dina uppgifter</h1>
+    <h1>Fyll i dina uppgifter</h1>
     <div asp-validation-summary="ValidationSummary.All"></div>
     <form asp-controller="Users" asp-action="Create">
 
