--- a/KickAss2/src/KickAss2/Views/Home/Index.cshtml
+++ b/KickAss2/src/KickAss2/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
     //    });
     //});
 </script>
-
+<link href="~/css/kickass.css" rel="stylesheet" />
 <style>
     .carousel-inner > .item > img,
     .carousel-inner > .item > a > img {
@@ -38,16 +38,16 @@
     }
 </style>
 
-<div id="row1" class="row" style="padding: 5px" ; text-align center>
+<div id="row1" class="row">
     <div class="col-sm-12">
         <h1 style="text-align: center">Inspiration</h1>
     </div>
 </div>
-<div id="row2" class="row" style="padding: 5px; text-align: center">
+<div id="row2" class="row">
     <div class="col-sm-4">
-        <img src="~/images/Almanackor.jpg" class="img-responsive" style="width: 100%; height: 100%" />
-        <p style="text-align: left; font-weight: bold">Almanacka, 39 kr</p>
-        <p style="text-align: left">En stilig almanack i A5 format</p>
+        <img src="~/images/Almanackor.jpg" class="img-responsive"/>
+        <p class="smallBoldHeadding">Almanacka, 39 kr</p>
+        <p class="paragrapgText">En stilig almanack i A5 format</p>
         </span><form asp-controller="Home" asp-action="AddToCart">
         <input type="text" class="numbersTextBox" name="quantity" id="quantity" />&nbsp;<span id="errmsg">
         <button type="button" class="btn btn-success btn-xs" style="background-color: forestgreen; float: left;"><span class="glyphicon glyphicon-shopping-cart"></span></button>
@@ -61,9 +61,9 @@
 
     </div>
     <div class="col-sm-4">
-        <img src="~/images/Pennor.jpg" class="img-responsive" style="width: 100%; height: 100%" />
-        <p style="text-align: left; font-weight: bold">Pennor, 199 kr</p>
-        <p style="text-align: left">Två stycken <i><b>must have</b></i> Kickass pennor</p>
+        <img src="~/images/Pennor.jpg" class="img-responsive" />
+        <p class="smallBoldHeadding">Pennor, 199 kr</p>
+        <p class="paragrapgText">Två stycken <i><b>must have</b></i> Kickass pennor</p>
         </span><form asp-controller="Home" asp-action="AddToCart">
             <input type="text" class="numbersTextBox" name="quantity" id="quantity" />&nbsp;<span id="errmsg">
                 <button type="button" class="btn btn-success btn-xs" style="background-color: forestgreen; float: left;"><span class="glyphicon glyphicon-shopping-cart"></span></button>
@@ -77,9 +77,9 @@
 
     </div>
     <div class="col-sm-4">
-        <img src="~/images/Kuvert.jpg" class="img-responsive" style="width: 100%; height: 100%" />
-        <p style="text-align: left; font-weight: bold">Kuvert, 29 kr</p>
-        <p style="text-align: left">50 stycken C5 kuvert</p>
+        <img src="~/images/Kuvert.jpg" class="img-responsive"/>
+        <p class="smallBoldHeadding">Kuvert, 29 kr</p>
+        <p class="paragrapgText">50 stycken C5 kuvert</p>
         </span><form asp-controller="Home" asp-action="AddToCart">
             <input type="text" class="numbersTextBox" name="quantity" id="quantity" />&nbsp;<span id="errmsg">
                 <button type="button" class="btn btn-success btn-xs" style="background-color: forestgreen; float: left;"><span class="glyphicon glyphicon-shopping-cart"></span></button>
