--- a/KickAss2/src/KickAss2/wwwroot/CSS/KickAss.css
+++ b/KickAss2/src/KickAss2/wwwroot/CSS/KickAss.css
@@ -5,6 +5,10 @@
     border-right-color: #d7d7d7;
 }
 
+.row{
+    padding: 5px;
+}
+
 #leftAlignLi {
     padding-left: 13pt;
 }
@@ -15,5 +19,32 @@
 
 a:hover {
     color: forestgreen;
+}
+
+h1{
+    text-align: left;
+    font-family: Calibri;
+    font-size: 42px;
+}
+
+.smallBoldHeadding{
+    font-family: Calibri;
+    text-align: left;
+    font-size: 16px;
+    text-align: left; 
+    font-weight: bold;
+}
+
+.paragrapgText{
+        font-family: Georgia;
+    text-align: left;
+    font-size: 12px;
+    text-align: left; 
+    font-weight: lighter;
+}
+
+.img-responsive {
+    width: 100%;
+    height: 100%;
 }
 
