Början på checkout

--- a/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
+++ b/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
@@ -78,7 +78,7 @@
 											<li><a href="/KickAssInformation/Questions">Vanliga frågor</a></li>
 										</ul>
 									</li>
-									<li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Din varukorg</a></li>
+									<li><a href="/Order/Checkout"><span class="glyphicon glyphicon-shopping-cart"></span> Din varukorg</a></li>
 									<li><a href="#"><input type="text" name="FirstName" placeholder="Ange sökordet"> <span class="glyphicon glyphicon-search"></span> Sök</a></li>
 								</ul>
                                 <ul class="nav navbar-nav navbar-right">
