--- a/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
+++ b/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
 											<li><a href="#category@subcategory.CategoryID">Underkategori 2.1</a></li>
 
 										</ul>
-
+										@*hej*@
 									</li>
 									<!--  #endregion categories -->
 									<li class="dropdown">
