Uppdaterad CSS igen med GreenHedder

--- a/KickAss2/src/KickAss2/Views/KickAssInformation/Questions.cshtml
+++ b/KickAss2/src/KickAss2/Views/KickAssInformation/Questions.cshtml
@@ -1,83 +1,88 @@
-﻿<div class="container-fluid">
-    <div id="row1" class="row" style="padding: 5px">
+﻿<link href="~/css/kickass.css" rel="stylesheet" />
+
+<div class="container-fluid">
+    <div id="row1" class="row">
         <div class="col-sm-12">
-            <h1 style="text-align: left">12 vanliga frågor och svar!</h1>
+            <h1>12 vanliga frågor och svar!</h1>
         </div>
     </div>
-    <div id="rowInbetween" class="row" style="padding: 5px">
+    <div id="rowInbetween" class="row">
         <div class="col-sm-12">
-            <p style="text-align: left; font-weight: bold; font-size: 22px; color: forestgreen">Beställning</p>
+            <p class="greenHeadding">Beställning</p>
         </div>
     </div>
-    <div id="row2" class="row" style="padding: 5px">
+    <div id="row2" class="row">
         <div class="col-sm-4">
-            <p style="text-align: left; font-weight: bold">Hur registrerar jag mig för att kunna handla?</p>
-            <p style="text-align: left">För att registrera dig som kund trycker du på "Logga in" som finns vid kassan och shoppingbag. Därefter väljer du "registrera" i den lilla rutan som kommer upp. Skriv in din e-mailadress och ett önskat lösenord, samt klicka på "registrera". Du får nu fram en ruta där det står "mina kunduppgifter", här skall du fylla i dina fullständiga uppgifter såsom, personnummer, för- efternamn, adress, telefonnummer. Nu är du välkommen att beställa.</p>
+            <p class="smallBoldHeadding">Hur registrerar jag mig för att kunna handla?</p>
+            <p class="paragrapgText">För att registrera dig som kund trycker du på "Logga in" som finns vid kassan och shoppingbag. Därefter väljer du "registrera" i den lilla rutan som kommer upp. Skriv in din e-mailadress och ett önskat lösenord, samt klicka på "registrera". Du får nu fram en ruta där det står "mina kunduppgifter", här skall du fylla i dina fullständiga uppgifter såsom, personnummer, för- efternamn, adress, telefonnummer. Nu är du välkommen att beställa.</p>
         </div>
         <div class="col-sm-4">
-            <p style="text-align: left; font-weight: bold">Jag kan inte logga in?</p>
-            <p style="text-align: left">Loggar du in med samma e-post adress du registrat hos oss? Tänk på att skriva med små bokstäver. Har du rätt lösenord? Du kan alltid skicka efter ett nytt lösenord, genom att klicka på ”Har glömt lösenord”.</p>
+            <p class="smallBoldHeadding">Jag kan inte logga in?</p>
+            <p class="paragrapgText">Loggar du in med samma e-post adress du registrat hos oss? Tänk på att skriva med små bokstäver. Har du rätt lösenord? Du kan alltid skicka efter ett nytt lösenord, genom att klicka på ”Har glömt lösenord”.</p>
         </div>
         <div class="col-sm-4">
-            <p style="text-align: left; font-weight: bold">Vilka avgifter har ni?</p>
-            <p style="text-align: left">Det billigaste alternativet är att skicka din beställning till butik. Detta är alltid gratis. Välj då "Hämta i butik" i kassan. Det är även gratis att välja hemleverans om du shoppar för mer än 400 kronor. För beställningar under 400 kronor tillkommer en fraktavgift på 34,90 kronor. Väljer man att betala med Klarna faktura tillkommer en fakturaavgift på 19 kr.</p>
+            <p class="smallBoldHeadding">Vilka avgifter har ni?</p>
+            <p class="paragrapgText">Det billigaste alternativet är att skicka din beställning till butik. Detta är alltid gratis. Välj då "Hämta i butik" i kassan. Det är även gratis att välja hemleverans om du shoppar för mer än 400 kronor. För beställningar under 400 kronor tillkommer en fraktavgift på 34,90 kronor. Väljer man att betala med Klarna faktura tillkommer en fakturaavgift på 19 kr.</p>
         </div>
     </div>
-    <div id="rowInbetween" class="row" style="padding: 5px">
+    <hr />
+    <div id="rowInbetween" class="row">
         <div class="col-sm-12">
-            <p style="text-align: left; font-weight: bold; font-size: 22px; color: forestgreen;">Betalning</p>
+            <p class="greenHeadding">Betalning</p>
         </div>
     </div>
-    <div id="row3" class="row" style="padding: 5px">
+    <div id="row3" class="row">
         <div class="col-sm-4">
-            <p style="text-align: left; font-weight: bold">Kan jag göra ändring i min beställning eller kunduppgifter?</p>
-            <p style="text-align: left">Du kan inte göra några ändringar i din order eller i dina adressuppgifter efter att du bekräftat din betalning. Dina kunduppgifter kan du ändra vid beställning, eller genom att logga in och välja Mina kunduppgifter.</p>
+            <p class="smallBoldHeadding">Kan jag göra ändring i min beställning eller kunduppgifter?</p>
+            <p class="paragrapgText">Du kan inte göra några ändringar i din order eller i dina adressuppgifter efter att du bekräftat din betalning. Dina kunduppgifter kan du ändra vid beställning, eller genom att logga in och välja Mina kunduppgifter.</p>
         </div>
         <div class="col-sm-4">
-            <p style="text-align: left; font-weight: bold">Vilka betalsätt kan man välja?</p>
-            <p style="text-align: left">Du kan välja mellan kortbetalning VISA, Mastercard och VISA Electron samt fakturabetalning via Klarna. Du kan också betala med presentkort. Läs mer under ”Hur betalar jag med mitt presentkort”. Du kan antingen skicka ett mail till www.klarna.com eller ringa till 08-120 120 10. Deras öppettider är: Mån-Tors 08:30-20:00 samt Fre 08:30-17:00 .</p>
+            <p class="smallBoldHeadding">Vilka betalsätt kan man välja?</p>
+            <p class="paragrapgText">Du kan välja mellan kortbetalning VISA, Mastercard och VISA Electron samt fakturabetalning via Klarna. Du kan också betala med presentkort. Läs mer under ”Hur betalar jag med mitt presentkort”. Du kan antingen skicka ett mail till www.klarna.com eller ringa till 08-120 120 10. Deras öppettider är: Mån-Tors 08:30-20:00 samt Fre 08:30-17:00 .</p>
         </div>
         <div class="col-sm-4">
-            <p style="text-align: left; font-weight: bold">Jag har inte fått någon faktura.</p>
-            <p style="text-align: left">Fakturan har Klarna skickat till dig per e-post. Du kan själv hämta din faktura från www.klarna.com, genom att ange din e-postadress vid "Hitta din faktura".</p>
+            <p class="smallBoldHeadding">Jag har inte fått någon faktura.</p>
+            <p class="paragrapgText">Fakturan har Klarna skickat till dig per e-post. Du kan själv hämta din faktura från www.klarna.com, genom att ange din e-postadress vid "Hitta din faktura".</p>
         </div>
     </div>
-    <div id="rowInbetween" class="row" style="padding: 5px">
+    <hr />
+    <div id="rowInbetween" class="row">
         <div class="col-sm-12">
-            <p style="text-align: left; font-weight: bold; font-size: 22px; color: forestgreen;">Leveranser</p>
+            <p class="greenHeadding">Leveranser</p>
         </div>
     </div>
-    <div id="row4" class="row" style="padding: 5px">
+    <div id="row4" class="row">
         <div class="col-sm-4">
-            <p style="text-align: left; font-weight: bold">Hur lång leveranstid har ni?</p>
-            <p style="text-align: left">Vår målsättning är att kunden skall få leverans inom 1-2 arbetsdagar. Leveranstiden kan dock variera beroende på mängden beställningar att expediera samt omständigheter vilka Gina Tricot inte råder över.</p>
+            <p class="smallBoldHeadding">Hur lång leveranstid har ni?</p>
+            <p class="paragrapgText">Vår målsättning är att kunden skall få leverans inom 1-2 arbetsdagar. Leveranstiden kan dock variera beroende på mängden beställningar att expediera samt omständigheter vilka Gina Tricot inte råder över.</p>
         </div>
         <div class="col-sm-4">
-            <p style="text-align: left; font-weight: bold">Var / hur hämtar jag ut varorna?</p>
-            <p style="text-align: left">När ditt paket lämnar vårt lager får du en leveransbekräftelse till din e-post. Här finner du information om dina varor har skickats som brev eller paket. Skickas beställningen som paket, finns där kollinummer angivet, som du kan använda för att söka efter ditt paket på www.posten.se. När paketet har scannats in hos ditt valda postombud, skickas sms-avisering eller så kan du hämta det med kollinummer och legitimation. Brev levereras direkt hem till dig.</p>
+            <p class="smallBoldHeadding">Var / hur hämtar jag ut varorna?</p>
+            <p class="paragrapgText">När ditt paket lämnar vårt lager får du en leveransbekräftelse till din e-post. Här finner du information om dina varor har skickats som brev eller paket. Skickas beställningen som paket, finns där kollinummer angivet, som du kan använda för att söka efter ditt paket på www.posten.se. När paketet har scannats in hos ditt valda postombud, skickas sms-avisering eller så kan du hämta det med kollinummer och legitimation. Brev levereras direkt hem till dig.</p>
         </div>
         <div class="col-sm-4">
-            <p style="text-align: left; font-weight: bold">Varför har jag inte fått alla varor?</p>
-            <p style="text-align: left">Ibland kan det hända att lagersaldot inte stämde på den saknade produkten, när du gjorde din beställning. Vi restnoterar inga produkter och varan kommer därför inte i efterhand. I samband med att din order lämnade vårt lager, debiterades du endast med beloppet för de produkter som faktiskt skickades. Om du trots allt debiterats för vara du inte fått ber vi dig att kontakta vår kundservice på info@kickasskontorsprylar.nu .</p>
+            <p class="smallBoldHeadding">Varför har jag inte fått alla varor?</p>
+            <p class="paragrapgText">Ibland kan det hända att lagersaldot inte stämde på den saknade produkten, när du gjorde din beställning. Vi restnoterar inga produkter och varan kommer därför inte i efterhand. I samband med att din order lämnade vårt lager, debiterades du endast med beloppet för de produkter som faktiskt skickades. Om du trots allt debiterats för vara du inte fått ber vi dig att kontakta vår kundservice på info@kickasskontorsprylar.nu .</p>
         </div>
     </div>
-    <div id="rowInbetween" class="row" style="padding: 5px">
+    <hr />
+    <div id="rowInbetween" class="row">
         <div class="col-sm-12">
-            <p style="text-align: left; font-weight: bold; font-size: 22px; color: forestgreen;">Returer</p>
+            <p class="greenHeadding">Returer</p>
         </div>
     </div>
-    <div id="row5" class="row" style="padding: 5px">
+    <div id="row5" class="row">
         <div class="col-sm-4">
-            <p style="text-align: left; font-weight: bold">Hur många dagar har jag på mig att returnera?</p>
-            <p style="text-align: left">Du har 14 dagar på dig att returnera, räknat från den dagen du mottagit din order. För att du som kund skall kunna utnyttja dina 14 dagars returrätt för en vara gäller det att den inte är använd, att etiketter finns kvar och att den i övrigt är i gott skick. Underkläder, badkläder, kosmetik och örhängen samt presentkort går inte att returnera. För att returnera en eller flera varor till oss loggar du in med ditt användarkonto och följer anvisningarna under ”Min sida”.</p>
+            <p class="smallBoldHeadding">Hur många dagar har jag på mig att returnera?</p>
+            <p class="paragrapgText">Du har 14 dagar på dig att returnera, räknat från den dagen du mottagit din order. För att du som kund skall kunna utnyttja dina 14 dagars returrätt för en vara gäller det att den inte är använd, att etiketter finns kvar och att den i övrigt är i gott skick. Underkläder, badkläder, kosmetik och örhängen samt presentkort går inte att returnera. För att returnera en eller flera varor till oss loggar du in med ditt användarkonto och följer anvisningarna under ”Min sida”.</p>
         </div>
         <div class="col-sm-4">
-            <p style="text-align: left; font-weight: bold">Hur lång tid tar det innan jag får mina pengar återbetalda?</p>
-            <p style="text-align: left">Du får räkna med att det kan ta upp till två veckor från det att du skickat din retur, tills vårt lager mottagit och registrerat din retur. Har du betalt med kort, kan det ta mellan 3-5 bankdagar tills pengarna finns tillgängliga på kortet igen.</p>
+            <p class="smallBoldHeadding">Hur lång tid tar det innan jag får mina pengar återbetalda?</p>
+            <p class="paragrapgText">Du får räkna med att det kan ta upp till två veckor från det att du skickat din retur, tills vårt lager mottagit och registrerat din retur. Har du betalt med kort, kan det ta mellan 3-5 bankdagar tills pengarna finns tillgängliga på kortet igen.</p>
         </div>
         <div class="col-sm-4">
-            <p style="text-align: left; font-weight: bold">Vem står för returen?</p>
-            <p style="text-align: left">Kund står i de flesta fall för returen. Har du betalat med kort sätts pengarna för returen minus returfrakten, 34,90 kr tillbaka in på kortet. Detta gäller också om du betalat med presentkort. Betalar du med faktura, justerar du själv beloppet för returen på fakturan som skickades via mail. Du betalar endast för de varor du behåller, fraktavgift 34,90 kr, fakturaavgift 19,00 och returporto 34,90. Om hela order returneras, betalar du endast returporto 34,90. Har vi skickat fel eller en defekt vara står vi naturligtvis för returportot.</p>
+            <p class="smallBoldHeadding">Vem står för returen?</p>
+            <p class="paragrapgText">Kund står i de flesta fall för returen. Har du betalat med kort sätts pengarna för returen minus returfrakten, 34,90 kr tillbaka in på kortet. Detta gäller också om du betalat med presentkort. Betalar du med faktura, justerar du själv beloppet för returen på fakturan som skickades via mail. Du betalar endast för de varor du behåller, fraktavgift 34,90 kr, fakturaavgift 19,00 och returporto 34,90. Om hela order returneras, betalar du endast returporto 34,90. Har vi skickat fel eller en defekt vara står vi naturligtvis för returportot.</p>
         </div>
     </div>
 </div>
