--- a/KickAss2/src/KickAss2/Views/KickAssInformation/ContactUs.cshtml
+++ b/KickAss2/src/KickAss2/Views/KickAssInformation/ContactUs.cshtml
@@ -1,4 +1,5 @@
-﻿<script>
+﻿<link href="~/css/kickass.css" rel="stylesheet" />
+<script>
     $name = $_POST['name'];
     $email = $_POST['email'];
     $message = $_POST['message'];
@@ -26,54 +27,54 @@
 @*<?php echo "<p class='text-danger'>$errName</p>";?>*@
 
 <div class="container-fluid">
-    <div id="row1" class="row" style="padding: 5px">
+    <div id="row1" class="row">
         <div class="col-sm-3">
-            <h1 style="text-align: left">Kontaktinformation</h1>
+            <h1>Kontaktinformation</h1>
         </div>
     </div>
-    <div id="row2" class="row" style="padding: 5px">
+    <div id="row2" class="row">
         <div class="col-sm-1">
-            <label>Telefon </label>
+            <p class="smallBoldHeadding">Telefon </p>
         </div>
         <div class="col-sm-2">
-            <p>+46 708 460 256</p>
+            <p class="paragrapgText">+46 708 460 256</p>
         </div>
     </div>
-    <div id="row2" class="row" style="padding: 5px">
+    <div id="row2" class="row">
         <div class="col-sm-1">
-            <label>E-post </label>
+            <p class="smallBoldHeadding">E-post </p>
         </div>
         <div class="col-sm-2">
-            <p>info@kickass.nu</p>
+            <p class="paragrapgText">info@kickass.nu</p>
         </div>
     </div>
 </div>
 
 <hr />
 
-<h1 style="text-align: left">Skicka oss ett mail</h1>
+<h1>Skicka oss ett mail</h1>
 <!-- #region Kontaktform -->
 <form class="form-horizontal" role="form" method="post" action="index.php">
     <div class="form-group">
-        <label for="name" class="col-sm-2 control-label">Namn</label>
+        <p style="text-align: right" class="smallBoldHeadding col-sm-2">Namn</p>
         <div class="col-sm-10">
             <input type="text" class="form-control" id="name" name="name" placeholder="För- och efternamn" value="">
         </div>
     </div>
     <div class="form-group">
-        <label for="email" class="col-sm-2 control-label">E-post</label>
+        <p style="text-align: right" class="smallBoldHeadding col-sm-2">E-post</p>
         <div class="col-sm-10">
             <input type="email" class="form-control" id="email" name="email" placeholder="example@kickass.nu" value="">
         </div>
     </div>
     <div class="form-group">
-        <label for="message" class="col-sm-2 control-label">Meddelande</label>
+        <p style="text-align: right" class="smallBoldHeadding col-sm-2">Meddelande</p>
         <div class="col-sm-10">
             <textarea class="form-control" rows="4" name="message"></textarea>
         </div>
     </div>
     <div class="form-group">
-        <label for="human" class="col-sm-2 control-label">2 + 3 = ?</label>
+        <p style="text-align: right" class="smallBoldHeadding col-sm-2">2 + 3 = ?</p>
         <div class="col-sm-10">
             <input type="text" class="form-control" id="human" name="human" placeholder="Ditt svar">
         </div>
