--- a/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
+++ b/KickAss2/src/KickAss2/Views/Shared/_Layout.cshtml
@@ -64,7 +64,6 @@
                             </div>
                             <div class="collapse navbar-collapse" id="myNavbar">
                                 <ul class="nav navbar-nav">
-                                    <li class="active"><a href="/home/index"><span class="glyphicon glyphicon-home"></span>  Home</a></li>
                                     <li class="dropdown">
                                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Produktkatalog<span class="caret"></span></a>
                                         <ul class="dropdown-menu">
@@ -90,7 +89,7 @@
                                         </ul>
                                     </li>
                                     <li><a href="/order/ShoppingCart"><span class="glyphicon glyphicon-shopping-cart"></span> Din varukorg</a></li>
-                                    <li><a href="#"><input type="text" name="FirstName" placeholder="Ange sökordet"> <span class="glyphicon glyphicon-search"></span> Sök</a></li>
+                                    <li><a href="#"><input type="text" name="FirstName" placeholder="Ange sökordet" style="width: 100px"> <span class="glyphicon glyphicon-search"></span> Sök</a></li>
                                 </ul>
                                 <ul class="nav navbar-nav navbar-right">
                                     @Html.Partial("LogInNavBar")
@@ -101,36 +100,36 @@
                 </div>
                 <!-- #endregion -->
             </div>
-@if (Model != null && Model.Item2 != null)
-{
+            @if (Model != null && Model.Item2 != null)
+            {
             <!-- #region Admin Navbar -->
-            <div id="rowAdmin" class="row">
-                <div class="container-fluid">
-                    <div class="col-sm-12">
-                        <nav class="navbar navbar-inverse" style="background-color: forestgreen; border-color: forestgreen; color: yellow">
-                            <div class="navbar-header" style="background-color: forestgreen; border-color: forestgreen; color: yellow">
-                                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                </button>
-                                <a class="navbar-brand" href="/home/index">Admin Panelen</a>
-                            </div>
-                            <div class="collapse navbar-collapse" id="myNavbar">
-                                <ul class="nav navbar-nav">
-                                    <li><a href="#"><span class="glyphicon glyphicon-plus"></span> Lägg till produkt</a></li>
-                                    <li><a href="#"><span class="glyphicon glyphicon-list-alt"></span> Hantera ordrar</a></li>
-                                </ul>
-                                <ul class="nav navbar-nav navbar-right">
-                                    <li><a href="#"><span class="glyphicon glyphicon-user"></span> Hantera kunder</a></li>
-                                </ul>
-                            </div>
-                        </nav>
+                <div id="rowAdmin" class="row">
+                    <div class="container-fluid">
+                        <div class="col-sm-12">
+                            <nav class="navbar navbar-inverse" style="background-color: forestgreen; border-color: forestgreen; color: yellow">
+                                <div class="navbar-header" style="background-color: forestgreen; border-color: forestgreen; color: yellow">
+                                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                                        <span class="icon-bar"></span>
+                                        <span class="icon-bar"></span>
+                                        <span class="icon-bar"></span>
+                                    </button>
+                                    <a class="navbar-brand" href="/home/index">Admin Panelen</a>
+                                </div>
+                                <div class="collapse navbar-collapse" id="myNavbar">
+                                    <ul class="nav navbar-nav">
+                                        <li><a href="#"><span class="glyphicon glyphicon-plus"></span> Lägg till produkt</a></li>
+                                        <li><a href="#"><span class="glyphicon glyphicon-list-alt"></span> Hantera ordrar</a></li>
+                                    </ul>
+                                    <ul class="nav navbar-nav navbar-right">
+                                        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Hantera kunder</a></li>
+                                    </ul>
+                                </div>
+                            </nav>
+                        </div>
                     </div>
                 </div>
-            </div>
             <!-- #endregion -->
-}
+            }
 
         </div>
         <div id="row3" class="row">
