--- a/KickAss2/src/KickAss2/Views/Home/Index.cshtml
+++ b/KickAss2/src/KickAss2/Views/Home/Index.cshtml
@@ -53,11 +53,7 @@
         <button type="button" class="btn btn-success btn-xs" style="background-color: forestgreen; float: left;"><span class="glyphicon glyphicon-shopping-cart"></span></button>
         </form>
         
-        @if (Model != null)
-        {
-        <button type="button" class="btn btn-info btn-xs" style="float: left;"><span class="glyphicon glyphicon-pencil"></span></button>
-        <button type="button" class="btn btn-danger btn-xs" style="float: left;"><span class="glyphicon glyphicon-trash"></span></button>
-        }
+        @Html.Partial("AddAndDeleteButtons")
 
     </div>
     <div class="col-sm-4">
@@ -69,11 +65,7 @@
                 <button type="button" class="btn btn-success btn-xs" style="background-color: forestgreen; float: left;"><span class="glyphicon glyphicon-shopping-cart"></span></button>
         </form>
 
-        @if (Model != null)
-        {
-            <button type="button" class="btn btn-info btn-xs" style="float: left;"><span class="glyphicon glyphicon-pencil"></span></button>
-            <button type="button" class="btn btn-danger btn-xs" style="float: left;"><span class="glyphicon glyphicon-trash"></span></button>
-        }
+        @Html.Partial("AddAndDeleteButtons")
 
     </div>
     <div class="col-sm-4">
@@ -85,11 +77,7 @@
                 <button type="button" class="btn btn-success btn-xs" style="background-color: forestgreen; float: left;"><span class="glyphicon glyphicon-shopping-cart"></span></button>
         </form>
 
-        @if (Model != null)
-        {
-            <button type="button" class="btn btn-info btn-xs" style="float: left;"><span class="glyphicon glyphicon-pencil"></span></button>
-            <button type="button" class="btn btn-danger btn-xs" style="float: left;"><span class="glyphicon glyphicon-trash"></span></button>
-        }
+        @Html.Partial("AddAndDeleteButtons")
 
     </div>
 </div>
