Liten designfix som var en bugg.

--- a/KickAss2/src/KickAss2/Views/Shared/MyPageAndLogOut.cshtml
+++ b/KickAss2/src/KickAss2/Views/Shared/MyPageAndLogOut.cshtml
@@ -5,3 +5,9 @@
     <p class="hidden-xs" id="1345" style="font-family: Candara; font-style: oblique; color: forestgreen; font-size: 30px; text-align: center;"> "Välkommen @Model.UserName"</p>
     <p class="hidden-sm hidden-lg hidden-md hidden-sm" id="1345" style="font-family: Candara; font-style: oblique; color: forestgreen; font-size: 16px; text-align: center;"> "Välkommen @Model.UserName"</p>
 }
+
+else
+{
+    <p class="hidden-xs" id="1345" style="font-family: Candara; font-style: oblique; color: forestgreen; font-size: 30px; text-align: center;"> "Enda kontorsbutiken med batonger"</p>
+    <p class="hidden-sm hidden-lg hidden-md hidden-sm" id="1345" style="font-family: Candara; font-style: oblique; color: forestgreen; font-size: 16px; text-align: center;"> "Enda kontorsbutiken med batonger"</p>
+}
