--- a/KickAss2/src/KickAss2/Views/User/CreateUser.cshtml
+++ b/KickAss2/src/KickAss2/Views/User/CreateUser.cshtml
@@ -5,6 +5,7 @@
     ViewBag.Title = "Registrera ny användare";
 }
 <link href="~/css/kickass.css" rel="stylesheet" />
+
 <body>
     <h1>Fyll i dina uppgifter</h1>
     <div asp-validation-summary="ValidationSummary.All"></div>
@@ -13,15 +14,12 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-2">
-                    <label asp-for="FirstName"></label>
+                    <label class="fatLabel" style="text-align: right; align-content:flex-end" asp-for="FirstName"></label>
                 </div>
                 <div class="col-sm-4">
                     <input asp-for="FirstName" class="form-control" placeholder="Förnamn">
                     <span asp-validation-for="FirstName"></span>
                 </div>
-            </div>
-            <div class="row" style="color:transparent"> .</div>
-            <div class="row">
                 <div class="col-sm-2">
                     <label asp-for="LastName"></label>
                 </div>
@@ -39,9 +37,6 @@
                     <input asp-for="Email" class="form-control" placeholder="Ex. kalle@gmail.com">
                     <span asp-validation-for="Email"></span>
                 </div>
-            </div>
-            <div class="row" style="color:transparent"> .</div>
-            <div class="row">
                 <div class="col-sm-2">
                     <label asp-for="VerifiedEmail"></label>
                 </div>
@@ -69,11 +64,8 @@
                     <input type="password" asp-for="Password" class="form-control" placeholder="Lösenord">
                     <span asp-validation-for="Password"></span>
                 </div>
-            </div>
-            <div class="row" style="color:transparent"> .</div>
-            <div class="row">
                 <div class="col-sm-2">
-                    <label>Upprepa</label> <label asp-for="VerifiedPassword"></label><label>et </label>
+                    <label asp-for="VerifiedPassword"></label>
                 </div>
                 <div class="col-sm-4">
                     <input type="password" asp-for="VerifiedPassword" class="form-control" placeholder="Lösenord">
