--- a/KickAss2/src/KickAss2/wwwroot/CSS/KickAss.css
+++ b/KickAss2/src/KickAss2/wwwroot/CSS/KickAss.css
@@ -27,6 +27,14 @@ h1{
     font-size: 42px;
 }
 
+.fatLabel{
+        font-family: Calibri;
+    text-align: left;
+    font-size: 16px;
+    text-align: right; 
+    font-weight: bold;
+}
+
 .greenHeadding{
         text-align: left;
     font-family: Calibri;
